fixing history.js link

--- a/template-router.html
+++ b/template-router.html
@@ -1,4 +1,4 @@
-<script src="/vendor/history/scripts/bundled/html5/native.history.js"></script>
+<script src="../history.js/scripts/bundled/html5/native.history.js"></script>
 <script>
 	// @license Copyright (C) 2014 Erik Ringsmuth - MIT license
 	(function(window, document) {
